# xarm7_cowork

./: Commands_to_run_sequence.txt  GUI Setup.md  Guide for run_xarm7_README.md  Position_of_parts.txt  README.md  RUN_TASKS.md  SETUP_VENV.md  data_recorder.py  gui.py  run_task_sequencer.py  run_xarm7.py  xarm_gui.py
tasks/: adhesive_applier_task.py  adhesive_returner_task.py  cover_plate_task.py  go_home.py  manual_mode_changer.py  open_gripper_final_task.py  pinion_gear_task.py  pinion_spindle_task.py  spur_spindle_task.py  stop_motion.py
xarm_custom_interfaces/: CMakeLists.txt  README_TASK_STATUS.md  package.xml
xarm_custom_interfaces/msg/: TaskStatus.msg
xarm_custom_interfaces/srv/: Trigger.srv
xarm_env/: pyvenv.cfg
xarm_msgs/: CMakeLists.txt  README_TASK_STATUS.md
xarm_msgs/msg/: JointNamesAndAngles.msg  StopMsg.msg
xarm_py_nodes/: package.xml  setup.cfg  setup.py
xarm_py_nodes/xarm_py_nodes/: joint_info_publisher.py
xarm_sequence_runner/: CMakeLists.txt  README.md  package.xml
xarm_sequence_runner/src/: emergency_stop_subscriber.cpp  process_launcher.cpp  task_sequencer.cpp
